Added images folder with google logo added nav bar and google logo

--- a/index.html
+++ b/index.html
@@ -2,11 +2,42 @@
 <html lang= "en">
 <head>
     <meta charset="UTF-8">
-    <title> Google</title>
-
+    <title>Google</title>
+<style>
+    /* Add a white background color to the top nav bar*/
+    .topnav {
+        background-color: white;
+        overflow: hidden;
+    }
+    /* Style the links inside the nav bar*/
+    .topnav a {
+        float: left;
+        color: black;
+        text-align: left;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: .85em;
+    }
+    /* Change the appearance of links on hover*/
+    .topnav a:hover {
+        text-decoration: underline;
+    }
+</style>
 </head>
+
 <body>
-    <h1>Google</h1>
+    <div class="topnav">
+        <a class="active" href="#about">About</a>
+        <a href="#store">Store</a>
+        <a href="#gmail">Gmail</a>
+        <a href="#images">Images</a>
+
+        </div>
+
+
+
+    <img src="/images/gLogo.png" width="auto" max-height="100%" alt="Google Logo">
+    
 
 
 
