--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         justify-content: center;
         align-items: center;
         height:100%;
-        magin-top: auto;
+        margin-top: auto;
     }
   
 </style>
