--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@
     }
     /* Change the appearance of links on hover*/
     .topNav a:hover, 
-    .rightNav a:hover {
+    .rightNav a:hover{
         text-decoration: underline;
+    }
+
+    .hamIcon{
+        display: flex;
+        justify-content: center;
     }
 
     .logo{
@@ -50,7 +55,105 @@
         height:100%;
         margin-top: auto;
     }
-  
+    /* below is an attempt to make a hamburger icon like 
+    google with 3x3 dots, icon is there and has hover effect
+    but I couldnt get it to do what I wanted so im going 
+    to use an image of the icon instead.
+
+#nav-icon1{
+    width: 30px;
+    height: 30px;
+    position: relative;
+    transition: .1s;
+    margin: 10px 10px;
+    cursor: pointer;
+    display: inline-block;
+}
+
+  #nav-icon1 span{
+      width: 5px;
+      height: 5px;
+      background-color: black;
+      display: block;
+      border-radius: 50%;
+      position: absolute;
+  }
+  #nav-icon1:hover span{
+      transform: scale(1.3);
+      transition: 350ms cubic-bezier(.8, .5, .2, 1.4);
+  }
+
+  #nav-icon1 span:nth-child(1){
+      left:0;
+      top:0;
+  }
+  #nav-icon1 span:nth-child(2){
+      left:12px;
+      top:0;
+  }
+  #nav-icon1 span:nth-child(3){
+      right:0;
+      top:0;
+  }
+  #nav-icon1 span:nth-child(4){
+      left:0;
+      top:12px;
+  }
+  #nav-icon1 span:nth-child(5){
+      position:absolute;
+      left:12px;
+      top:12px;
+  }
+  #nav-icon1 span:nth-child(6){
+      right:0px;
+      top:12px;
+  }
+  #nav-icon1 span:nth-child(7){
+      left:0px;
+      bottom:0px;
+  }
+  #nav-icon1 span:nth-child(8){
+      position:absolute;
+      left:12px;
+      bottom:0px;
+  }
+  #nav-icon1 span:nth-child(9){
+      right:0px;
+      bottom:0px;
+  }
+
+  #nav-menu1:checked ~ label> #nav-icon1{
+      transform: rotate(180deg);
+      cursor: pointer;
+      transition: .2s cubic-bezier(.8, .5, .2, 1.4);
+  }
+
+  #nav-menu1:checked ~ label> #nav-icon1 span{
+      border-radius: 50%;
+      transition-delay: 200ms;
+      transition: .5s cubic-bezier(.8, .5, .2, 1.4);
+  }
+  #nav-menu1:checked ~ label> #nav-icon1 span:nth-child(2){
+      left: 6px;
+      top: 6px;
+  }
+  #nav-menu1:checked ~ label> #nav-icon1 span:nth-child(4){
+      left: 6px;
+      top: 18px;
+  }
+  #nav-menu1:checked ~ label> #nav-icon1 span:nth-child(6){
+      right: 6px;
+      top: 6px;
+  }
+  #nav-menu1:checked ~ label> #nav-icon1 span:nth-child(8){
+      left: 18px;
+      bottom: 6px;
+  }
+  #nav-menu1{
+      display:none;
+  }
+  */
+
 </style>
 </head>
 
@@ -65,8 +168,24 @@
         <a class= "active" href="#"> </a>
         <a href="#">Gmail</a>
         <a href="#">Images</a>
-        <a href="#">" </a>
+        <img class="gHamIcon" src="images/gHamIcon.png" width="auto" height="30px" alt="Menu Icon">
+    <!--  below is html for the now scrapped coded hamburger
+    icon like googles
+        <input type="checkbox" id="nav-menu1">
+        <label id="nav-icon1" for="nav-menu1">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>        
+        <span></span>
+        <span></span>
+        <span></span>
+        </label>
+        -->
     </div>
+    
 
     <div class="logo">
     <img src="/images/gLogo.png" width="auto" max-height="50%" alt="Google Logo">
