--- a/index.html
+++ b/index.html
@@ -5,57 +5,38 @@
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
     <title>Google</title>
     <link rel="icon" href="images/google-icon.png">
-    <link rel="stylesheet" href="googe.css">
-<style>
-    @font-face {
-    font-family: 'Product Sans';
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/productsans/v5/HYvgU2fE2nRJvZ5JFAumwegdm0LZdjqr5-oayXSOefg.woff2) format('woff2');
-}
-    html,
-    body {
-        font-family: Arial, sans-serif;
-        font-size: 1em;;
-        width: 100%;
-        height: 100vh;
- 
-        margin: 0;
-        
-        
-    }
+    <link rel="stylesheet" href="google.css">
 
-   
-
-</style>
 </head>
 
 <body>
     <header>
         <nav>
             <ul class="header-nav">
-                 <li><a href="#">About</a></li>
-                 <li><a href="#">Store</a></li>
-                 <li style="float:right"><a href="#">!</a></li>
-                 <li style="float:right"><a href="#"><img src="/images/gHamIcon.png" height="23px" width="23px"></a></li>
-                 <li style="float:right" ><a href="#">Images</a></li>
-                 <li style="float:right"><a href="#">Gmail</a></li>
+                 <a href="#">About</a>
+                 <a href="#">Store</a>
+            </ul>
+            <ul class="header-nav">
+                <a href="#">Gmail</a>
+                <a href="#">Images</a>
+                <img class="header-img" src="/images/gHamIcon.png" alt="google-apps">
+                <img class="header-img" src="/images/profile-pic.png" height="30px" width="25px" alt="profile-picture">   
             </ul>
         </nav>
-
-
-
     </header>
+
     <section>
     <div class="logo">
-    <img class ="glogo" src="/images/gLogo.png" width="auto"  alt="Google Logo">
+        <img class ="glogo" src="/images/gLogo.png" width="auto"  alt="Google Logo">
     </div>
-    <div class="input">
-    <img src="/images/glass-2.png" alt="searchIcon">
-    <input class ="input" type="text" id="search">
-    <img src="/images/mic-2.png" alt="micIcon">
-    <button class="gSearchBtn" id="googleSearchBtn">Google Search</button>
-    <button class="gSearchBtn">I'm Feeling Lucky</button>
+    <div class="input-container">
+        <img src="/images/glass-2.png" alt="searchIcon">
+        <input class ="input" type="text" id="search">
+        <img src="/images/mic-2.png" alt="micIcon">
+    </div>
+    <div>
+        <button class="gSearchBtn" id="googleSearchBtn">Google Search</button>
+        <button class="gSearchBtn">I'm Feeling Lucky</button>
     </div>
     </section>
 
