changed size of profile image, removed white background from ham icon image, made box shadow show properly in nav bar for the mentioned images when hovered over

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <ul class="header-nav">
                 <a href="#">Gmail</a>
                 <a href="#">Images</a>
-                <img class="header-img" src="/images/gHamIcon.png" alt="google-apps">
-                <img class="header-img" src="/images/profile-pic.png" height="30px" width="25px" alt="profile-picture">   
+                <img class="header-img" src="/images/gHamIcon.png" height="25px" width="25px" alt="google-apps">
+                <img class="profile-img" src="/images/profile-pic.png" height="30px" width="30px" alt="profile-picture">   
             </ul>
         </nav>
     </header>
