added footer leaf image, moved buttons below search bar and colorized accordingly with hover effects

--- a/index.html
+++ b/index.html
@@ -26,29 +26,37 @@
     </header>
 
     <section>
-    <div class="logo">
-        <img class ="glogo" src="/images/gLogo.png" width="auto"  alt="Google Logo">
-    </div>
-    <div class="input-container">
-        <img src="/images/glass-2.png" alt="searchIcon">
-        <input class ="input" type="text" id="search">
-        <img src="/images/mic-2.png" alt="micIcon">
-    </div>
-    <div>
-        <button class="gSearchBtn" id="googleSearchBtn">Google Search</button>
-        <button class="gSearchBtn">I'm Feeling Lucky</button>
+        <div class="logo">
+            <img class ="glogo" src="/images/gLogo.png" width="auto"  alt="Google Logo">
+        </div>
+        <div class="input-container">
+            <img src="/images/glass-2.png" alt="searchIcon">
+            <input class ="input" type="text" id="search">
+            <img src="/images/mic-2.png" alt="micIcon">
+        </div>
+        <div class="button-container">
+            <button class="gSearchBtn" >Google Search</button>
+            <button class="gSearchBtn">I'm Feeling Lucky</button>
     </div>
     </section>
 
-    <div id="footer">
-        <a href="#" id="advertising">Advertising</a>
-        <a href="#" id="business">Business</a>
-        <a href="#" id="how">How Search Works</a>
-        <a href="#" id="">Carbon Neutral Since 2007</a>
-        <a href="#" id="">Privacy</a>
-        <a href="#" id="">Terms</a>
-        <a href="#" id="">Services</a>
-    </div>
+    <footer>
+        <nav>
+            <ul id="footer-left">
+                <a href="#" id="advertising">Advertising</a>
+                <a href="#" id="business">Business</a>
+                <a href="#" id="how">How Search Works</a>
+            </ul>
+            <ul id="footer-middle">
+                <a href="#" id=""><img src="/images/footer-leaf.png" height="15px" width= "15px" alt="footer-leaf"> Carbon Neutral Since 2007</a>
+            </ul>
+            <ul id="footer-right">    
+                <a href="#" id="">Privacy</a>
+                <a href="#" id="">Terms</a>
+                <a href="#" id="">Settings</a>
+            </ul>
+        </nav>
+    </footer>
 
 </body>
 </html>
