added id to footer nav, added media query to adjust website to adjust to different screen resolutions

--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
     </section>
 
     <footer>
-        <nav>
+        <nav id="footer-nav">
             <ul id="footer-left">
                 <a href="#" id="advertising">Advertising</a>
                 <a href="#" id="business">Business</a>
                 <a href="#" id="how">How Search Works</a>
             </ul>
             <ul id="footer-middle">
-                <a href="#" id=""><img src="/images/footer-leaf.png" height="15px" width= "15px" alt="footer-leaf"> Carbon Neutral Since 2007</a>
+                <img src="/images/footer-leaf.png" height="15px" width= "15px" alt="footer-leaf">
+                <a href="#" id="">Carbon Neutral Since 2007</a>
             </ul>
             <ul id="footer-right">    
                 <a href="#" id="">Privacy</a>
