added link to my github when clicking on profile picture

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#">Gmail</a>
                 <a href="#">Images</a>
                 <img class="header-img" src="/images/gHamIcon.png" height="25px" width="25px" alt="google-apps">
-                <img class="profile-img" src="/images/profile-pic.png" height="30px" width="30px" alt="profile-picture">   
+                <a href="https://github.com/vrayev/"><img class="profile-img" src="/images/profile-pic.png" height="30px" width="30px" alt="profile-picture"></a>
             </ul>
         </nav>
     </header>
