--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
     <title>Google</title>
     <link rel="icon" href="images/google-icon.png">
-    <link rel="stylesheet" href="google.css">
+    <link rel="stylesheet" href="/google.css">
 
 </head>
 
