fixed image filepaths for website to load properly on github

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
     <title>Google</title>
-    <link rel="icon" href="images/google-icon.png">
+    <link rel="icon" href="./images/google-icon.png">
     <link rel="stylesheet" href="google.css">
 
 </head>
@@ -20,19 +20,19 @@
                 <a href="#">Gmail</a>
                 <a href="#">Images</a>
                 <img class="header-img" src="./images/gHamIcon.png" height="25px" width="25px" alt="google-apps">
-                <a href="https://github.com/vrayev/"><img class="profile-img" src="/images/profile-pic.png" height="30px" width="30px" alt="profile-picture"></a>
+                <a href="https://github.com/vrayev/"><img class="profile-img" src="./images/profile-pic.png" height="30px" width="30px" alt="profile-picture"></a>
             </ul>
         </nav>
     </header>
 
     <section>
         <div class="logo">
-            <img class ="glogo" src="/images/gLogo.png" width="auto"  alt="Google Logo">
+            <img class ="glogo" src="./images/gLogo.png" width="auto"  alt="Google Logo">
         </div>
         <div class="input-container">
-            <img src="/images/glass-2.png" alt="searchIcon">
+            <img src="./images/glass-2.png" alt="searchIcon">
             <input class ="input" type="text" id="search">
-            <img src="/images/mic-2.png" alt="micIcon">
+            <img src="./images/mic-2.png" alt="micIcon">
         </div>
         <div class="button-container">
             <button class="gSearchBtn" >Google Search</button>
@@ -48,7 +48,7 @@
                 <a href="#" id="how">How Search Works</a>
             </ul>
             <ul id="footer-middle">
-                <img src="/images/footer-leaf.png" height="15px" width= "15px" alt="footer-leaf">
+                <img src="./images/footer-leaf.png" height="15px" width= "15px" alt="footer-leaf">
                 <a href="#" id="">Carbon Neutral Since 2007</a>
             </ul>
             <ul id="footer-right">    
