changed image height of mag glass and mic

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <img class ="glogo" src="./images/gLogo.png" width="auto"  alt="Google Logo">
         </div>
         <div class="input-container">
-            <img src="./images/glass-2.png" alt="searchIcon">
+            <img src="./images/glass-2.png" height="35px" alt="searchIcon">
             <input class ="input" type="text" id="search">
-            <img src="./images/mic-2.png" alt="micIcon">
+            <img src="./images/mic-2.png" height= "35px" alt="micIcon">
         </div>
         <div class="button-container">
             <button class="gSearchBtn" >Google Search</button>
